# analyzing-llm-rationale

./: .gitattributes  .gitignore  .watchdog_status.json  .watchdog_status_tmp.py  AGENTS.md  ARTIFACT_MANIFEST.md  CITATION.cff  CODEX_TASKS.md  Dockerfile  HPC_SETUP.md  LICENSE  LOCAL_INFERENCE_README.md  README.md  SLURM_GUIDE.md  __watchdog_stats.py  _watchdog_status.py  download_qwen_model.py  local_inference.py  pyproject.toml  test_local_inference.py  tmp_watchdog_check.py  tmp_watchdog_stats.py  tmp_watchdog_status.py  watchdog_status.py
.github/workflows/: ci.yml  docker.yml  track-record.yml
analysis/: metrics_by_model_temperature.csv  metrics_by_model_temperature_variant.csv  metrics_by_model_variant.csv  qwen25_v0_t0_rationale_eval.csv  qwen25_v0_t0_rationale_eval_summary.json  qwen25_v0_t0_rationale_eval_summary.md
analysis/llm_judge_rationale_eval_gemma/gemma-4-31b-it/: GPT-OSS-120B__temperature_025.jsonl  Qwen2.5-7b-instruct__temperature_000.jsonl  Qwen3-32B__temperature_0.jsonl
analysis/partial_shap_analysis/: combined_mean_details.csv  feature_importance.csv  gemma-4-31b-it_details.csv  kimi-k2.5_details.csv  metrics_summary.csv  metrics_summary.json  summary.md
configs/: models.yaml  variants.yaml
flows/: forecasting_flow.py
paper/: acl_long_paper.tex  references.bib
presentation/: best_complete_runs.csv  build_context_pptx.py  build_pptx.py  context_structuring.pptx  context_structuring_slides.md  variant_effects_complete_runs.csv
prompts/: system.txt  variant0_neutral_baseline.txt  variant1_predicted_event.txt  variant2_key_attribute.txt  variant3_reasoning_type.txt  variant4_credibility.txt  variant5_key_conditions.txt  variant6_chain_of_thought.txt  variant6_step_by_step_reasoning.txt  variant7_uncertainty_language.txt  variant8_temporal_anchors.txt
scripts/: README.md  _cron_watchdog_status.py  _watchdog_check.py  _watchdog_counts.py  _watchdog_stats.py  _watchdog_status.py  build_project_pipeline_svg.js  build_project_pipeline_three.js  build_track_record.py  check_v3_v4_files.py  check_variant_status.py  cron_watchdog.py  evaluate_metrics.py  evaluate_rationale_quality.py  evaluate_rationales_with_llm_judges.py  list_variant_workers.ps1  plot_rationale_shap_summary.py  probe_id_477.py  recover_model_until_plateau.py  recover_temperature_parallel.py  recover_variant.py  rerun_null_ids_drop_text.py  rerun_null_ids_drop_text_v2.py  rerun_null_ids_drop_text_v3.py  rerun_null_ids_drop_text_v4.py  rerun_null_ids_drop_text_v5.py  rerun_null_ids_drop_text_v6.py  retry_temperature_nulls.py  revise_acl_pdf.py  run_full_then_nullfix.py  run_full_then_nullfix_v2.py  run_full_then_nullfix_v3.py  run_full_then_nullfix_v4.py  run_full_then_nullfix_v5.py  run_full_then_nullfix_v6.py  run_one_chunk_variant1.ps1  run_one_chunk_variant2.ps1  run_partial_shap_analysis.py  run_qwen_all_minimal.py  run_qwen_all_minimal_v2.py  (+16 more)
slurm/: README.md  run_variant_common.sh  submit_sweep.sh  variant0.sh  variant1.sh  variant2.sh  variant3.sh  variant4.sh  variant5.sh  variant6.sh  variant7.sh  variant8.sh
src/analyzing_llm_rationale/: __init__.py  __main__.py  cache_env.py  cli.py  config.py  db.py  metrics.py  news_pipeline.py  pipeline.py  providers.py  server.py  validation.py
static/: index.html  track_record.json
tests/: test_evaluate_metrics.py  test_news_pipeline.py  test_pipeline.py  test_server.py
(+805 files in other folders)
